E2E: backend-gated tests (documents, search, CRUD, permissions) with safe env access; CI: add containerized backend fallback and extended readiness; centralize REST repo endpoint
Co-Authored-By: Akinori Ishii <yumioka> <akinori@sanwa-c.com>